--- a/justine/Base.lproj/Main.storyboard
+++ b/justine/Base.lproj/Main.storyboard
@@ -59,6 +59,14 @@
                                     <action selector="microphoneTapped:" destination="Yv0-Yn-W7l" eventType="touchUpInside" id="njE-le-VUq"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OTQ-jI-hsD">
+                                <rect key="frame" x="258" y="97" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="proba:" destination="Yv0-Yn-W7l" eventType="touchUpInside" id="dLV-O6-VgK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
