--- a/justine/Base.lproj/Main.storyboard
+++ b/justine/Base.lproj/Main.storyboard
@@ -86,11 +86,30 @@
                         <outlet property="microphoneButton" destination="GqT-2C-1zh" id="9Ru-A0-sCI"/>
                         <outlet property="questionTextView" destination="Dl3-xq-pMR" id="oDI-zK-ey2"/>
                         <outlet property="speakerAnim" destination="4kW-uD-4xY" id="fTF-jV-mm5"/>
+                        <segue destination="gHY-ep-ZDb" kind="show" identifier="pushGame" id="beP-ze-w73"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NsN-yh-6Ml" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135" y="138.38028169014083"/>
+            <point key="canvasLocation" x="-1455" y="174"/>
+        </scene>
+        <!--Game View Controller-->
+        <scene sceneID="Iu9-N6-x39">
+            <objects>
+                <viewController id="gHY-ep-ZDb" customClass="GameViewController" customModule="justine" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="tfK-Wa-hkh"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZHa-Qy-jI5"/>
+                    </layoutGuides>
+                    <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="eWW-Wv-GRP" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ya7-Ob-pAV" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-401" y="173"/>
         </scene>
     </scenes>
     <resources>
